--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,4 @@ libvirt-python>=6.0.0 # LGPLv2+
 pyghmi>=1.2.0 # Apache-2.0
 cliff!=2.9.0,>=2.8.0 # Apache-2.0
 pyzmq>=19.0.0  # LGPL+BSD
+openstacksdk
